2005-03-09  Derek Price  <derek@ximbiot.com>

	* texi2html: Use the Cwd module for cross-platform portability.
	(Thanks to a report from Vincent LaBella <VLaBella@uamail.albany.edu>.)

2005-03-07  Derek Price  <derek@ximbiot.com>

	* texi2html.pl:  Comment end of Texi2HTML::Config package.

2005-02-27  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init,texi2html.pl: handle @frenchspacing.
	* Tests/formatting/comments.texi: test for @frenchspacing.

2005-02-13  Patrice Dumas  <dumas@centre-cired.fr>

	* README,doc/texi2html.texi: update.
	* buildt2h.sh: add this script, a simple wrapper around the sed 
	one-liner that builds the texi2html script. The arguments are the 
	files concatenated, determined by make.
	* Makefile.am: handle buildt2h.sh.

2005-02-13  Patrice Dumas  <dumas@centre-cired.fr>

	* INTRODUCTION: remove and merge content in...
	* README: ...merge with INTRODUCTION content and update.
	* Makefile.am,doc/Makefile.am: protect @ in sed one-liners
	such that configure doesn't replace the variables in the
	Makefile.
	* doc/texi2html.1.in: update and add explanation for more 
	command line options.

2005-02-12  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: handle def command with x (like @deffnx) within
	deff command paragraph (construct is in octave manual).
	* Tests/*: test for deffnx within deff command paragraph.

2005-02-12  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl,texi2html.init: accept first arg for def like
	commands. 
	handle construct like @deffn{something} (bug report found on the 
	web about the octave manual from Nelson H. F. Beebe).
	* Makefile.am: remove dist-local: texi2html, as texi2html is not
	distributed.
	* Tests/*: test for more deffnx constructs.

2005-02-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (texi2html_SOURCES): Rename to...
	(texi2html_sources): ...this to avoid an Automake 1.9.4 warning.

2005-02-06  Derek Price  <derek@ximbiot.com>
